# asg2

./: .gitignore  Ball.cpp  Ball.h  BaseApplication.cpp  BaseApplication.h  Cannon.cpp  Cannon.h  Common.h  Court.cpp  Court.h  KeyMap.h  Launcher.cpp  Launcher.h  Makefile.am  MinimalOgre.cpp  MinimalOgre.h  Paddle.cpp  Paddle.h  PaddleController.cpp  PaddleController.h  Project2-GUI.cpp  Project2-GUI.h  README  README.md  Room.cpp  Room.h  SoundEffect.cpp  SoundEffect.h  SoundManager.cpp  SoundManager.h  TutorialApplication.cpp  TutorialApplication.h  buildit  configure.ac  makeit  package.sh  plugins.cfg  resources.cfg
media/materials/scripts/: Examples.material  ballcolor.material  paddlecolor.material  wallcolor.material
